@@ -24,20 +24,23 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Collection;
+
 import org.apache.maven.surefire.api.report.LegacyPojoStackTraceWriter;
-import org.apache.maven.surefire.api.report.RunListener;
 import org.apache.maven.surefire.api.report.SimpleReportEntry;
 import org.apache.maven.surefire.api.report.StackTraceWriter;
 import org.apache.maven.surefire.api.testset.TestSetFailedException;
+import org.apache.maven.surefire.report.ClassMethodIndexer;
 
+import static java.util.Objects.requireNonNull;
+import static org.apache.maven.surefire.api.report.RunMode.NORMAL_RUN;
 import static org.apache.maven.surefire.api.report.SimpleReportEntry.withException;
 
 /**
  * Executes a JUnit3 test class
  *
  */
-public class PojoTestSet
-    implements SurefireTestSet
+public class PojoTestSetExecutor
+    implements SurefireTestSetExecutor
 {
     private static final String TEST_METHOD_PREFIX = "test";
 
@@ -47,49 +50,24 @@ public class PojoTestSet
 
     private static final Object[] EMPTY_OBJECT_ARRAY = {};
 
-    private final Class<?> testClass;
+    private final JUnit3Reporter reporter;
 
-    private final Collection<Method> testMethods = new ArrayList<>();
-
-    private Method setUpMethod;
-
-    private Method tearDownMethod;
-
-    public PojoTestSet( final Class<?> testClass )
+    public PojoTestSetExecutor( JUnit3Reporter reporter )
     {
-        if ( testClass == null )
-        {
-            throw new IllegalArgumentException( "testClass is null" );
-        }
-
-        this.testClass = testClass;
+        this.reporter = requireNonNull( reporter, "reportManager is null" );
     }
 
     @Override
-    public void execute( RunListener reportManager, ClassLoader loader )
+    public void execute( Class<?> testClass, ClassLoader loader )
             throws TestSetFailedException
     {
-        if ( reportManager == null )
+        DiscoveredTestMethods discoveredTestMethods = discoverTestMethods( requireNonNull( testClass ) );
+
+        for ( Method testMethod : discoveredTestMethods.testMethods )
         {
-            throw new NullPointerException( "reportManager is null" );
-        }
-
-        executeTestMethods( reportManager );
-    }
-
-    private void executeTestMethods( RunListener reportManager )
-            throws TestSetFailedException
-    {
-        if ( reportManager == null )
-        {
-            throw new NullPointerException( "reportManager is null" );
-        }
-
-        discoverTestMethods();
-
-        for ( Method testMethod : testMethods )
-        {
-            boolean abort = executeTestMethod( testMethod, reportManager );
+            ClassMethodIndexer indexer = reporter.getClassMethodIndexer();
+            long testRunId = indexer.indexClassMethod( testClass.getName(), testMethod.getName() );
+            boolean abort = executeTestMethod( testClass, testMethod, testRunId, discoveredTestMethods );
             if ( abort )
             {
                 break;
@@ -97,40 +75,37 @@ public class PojoTestSet
         }
     }
 
-    private boolean executeTestMethod( Method method, RunListener reportManager )
+    private boolean executeTestMethod( Class<?> testClass, Method method, long testRunId,
+                                       DiscoveredTestMethods methods )
             throws TestSetFailedException
     {
-        if ( method == null || reportManager == null )
-        {
-            throw new NullPointerException();
-        }
-
         final Object testObject;
 
         try
         {
-            testObject = testClass.newInstance();
+            testObject = testClass.getDeclaredConstructor().newInstance();
         }
         catch ( ReflectiveOperationException e )
         {
             throw new TestSetFailedException( "Unable to instantiate POJO '" + testClass + "'.", e );
         }
 
-        final String testClassName = getTestClass().getName();
+        final String testClassName = testClass.getName();
         final String methodName = method.getName();
         final String userFriendlyMethodName = methodName + "()";
-        final String testName = getTestName( userFriendlyMethodName );
+        final String testName = getTestName( testClassName, userFriendlyMethodName );
 
-        reportManager.testStarting( new SimpleReportEntry( testClassName, null, testName, null ) );
+        reporter.testStarting( new SimpleReportEntry( NORMAL_RUN, testRunId, testClassName, null, testName, null ) );
 
         try
         {
-            setUpFixture( testObject );
+            setUpFixture( testObject, methods );
         }
         catch ( Throwable e )
         {
             StackTraceWriter stackTraceWriter = new LegacyPojoStackTraceWriter( testClassName, methodName, e );
-            reportManager.testFailed( withException( testClassName, null, testName, null, stackTraceWriter ) );
+            reporter.testFailed(
+                withException( NORMAL_RUN, testRunId, testClassName, null, testName, null, stackTraceWriter ) );
 
             // A return value of true indicates to this class's executeTestMethods
             // method that it should abort and not attempt to execute
@@ -144,33 +119,37 @@ public class PojoTestSet
         try
         {
             method.invoke( testObject, EMPTY_OBJECT_ARRAY );
-            reportManager.testSucceeded( new SimpleReportEntry( testClassName, null, testName, null ) );
+            reporter.testSucceeded(
+                new SimpleReportEntry( NORMAL_RUN, testRunId, testClassName, null, testName, null ) );
         }
         catch ( InvocationTargetException e )
         {
             Throwable t = e.getTargetException();
             StackTraceWriter stackTraceWriter = new LegacyPojoStackTraceWriter( testClassName, methodName, t );
-            reportManager.testFailed( withException( testClassName, null, testName, null, stackTraceWriter ) );
+            reporter.testFailed(
+                withException( NORMAL_RUN, testRunId, testClassName, null, testName, null, stackTraceWriter ) );
             // Don't return  here, because tearDownFixture should be called even
             // if the test method throws an exception.
         }
         catch ( Throwable t )
         {
             StackTraceWriter stackTraceWriter = new LegacyPojoStackTraceWriter( testClassName, methodName, t );
-            reportManager.testFailed( withException( testClassName, null, testName, null, stackTraceWriter ) );
+            reporter.testFailed(
+                withException( NORMAL_RUN, testRunId, testClassName, null, testName, null, stackTraceWriter ) );
             // Don't return  here, because tearDownFixture should be called even
             // if the test method throws an exception.
         }
 
         try
         {
-            tearDownFixture( testObject );
+            tearDownFixture( testObject, methods );
         }
         catch ( Throwable t )
         {
             StackTraceWriter stackTraceWriter = new LegacyPojoStackTraceWriter( testClassName, methodName, t );
             // Treat any exception from tearDownFixture as a failure of the test.
-            reportManager.testFailed( withException( testClassName, null, testName, null, stackTraceWriter ) );
+            reporter.testFailed(
+                withException( NORMAL_RUN, testRunId, testClassName, null, testName, null, stackTraceWriter ) );
 
             // A return value of true indicates to this class's executeTestMethods
             // method that it should abort and not attempt to execute
@@ -188,54 +167,51 @@ public class PojoTestSet
         return false;
     }
 
-    private String getTestName( String testMethodName )
+    private String getTestName( String testClassName, String testMethodName )
     {
-        if ( testMethodName == null )
-        {
-            throw new NullPointerException( "testMethodName is null" );
-        }
-
-        return getTestClass().getName() + "." + testMethodName;
+        return testClassName + "." + requireNonNull( testMethodName, "testMethodName is null" );
     }
 
-    private void setUpFixture( Object testObject )
+    private void setUpFixture( Object testObject, DiscoveredTestMethods methods )
         throws Throwable
     {
-        if ( setUpMethod != null )
+        if ( methods.setUpMethod != null )
         {
-            setUpMethod.invoke( testObject );
+            methods.setUpMethod.invoke( testObject );
         }
     }
 
-    private void tearDownFixture( Object testObject )
+    private void tearDownFixture( Object testObject, DiscoveredTestMethods methods )
         throws Throwable
     {
-        if ( tearDownMethod != null )
+        if ( methods.tearDownMethod != null )
         {
-            tearDownMethod.invoke( testObject );
+            methods.tearDownMethod.invoke( testObject );
         }
     }
 
-    private void discoverTestMethods()
+    private DiscoveredTestMethods discoverTestMethods( Class<?> testClass )
     {
-        for ( Method m : getTestClass().getMethods() )
+        DiscoveredTestMethods methods = new DiscoveredTestMethods();
+        for ( Method m : testClass.getMethods() )
         {
             if ( isNoArgsInstanceMethod( m ) )
             {
                 if ( isValidTestMethod( m ) )
                 {
-                    testMethods.add( m );
+                    methods.testMethods.add( m );
                 }
                 else if ( SETUP_METHOD_NAME.equals( m.getName() ) )
                 {
-                    setUpMethod = m;
+                    methods.setUpMethod = m;
                 }
                 else if ( TEARDOWN_METHOD_NAME.equals( m.getName() ) )
                 {
-                    tearDownMethod = m;
+                    methods.tearDownMethod = m;
                 }
             }
         }
+        return methods;
     }
 
     private static boolean isNoArgsInstanceMethod( Method m )
@@ -251,14 +227,10 @@ public class PojoTestSet
         return m.getName().startsWith( TEST_METHOD_PREFIX );
     }
 
-    @Override
-    public String getName()
+    private static class DiscoveredTestMethods
     {
-        return getTestClass().getName();
-    }
-
-    private Class<?> getTestClass()
-    {
-        return testClass;
+        final Collection<Method> testMethods = new ArrayList<>();
+        Method setUpMethod;
+        Method tearDownMethod;
     }
 }
